--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,16 @@
   text-align: center;
   box-shadow: 10px 10px 5px;
 }
+table {
+  width: 100%;
+  border-radius: 6px;
+}
+tr,td,th,table {
+  border: 1px solid;
+}
+th {
+  padding: 6px;
+}
+td {
+  padding: 3px;
+}
