--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,21 @@
   text-align: center;
   box-shadow: 10px 10px 5px;
   font-style: italic;
+  background-color: #081B4B;
+  color: white;
 }
-table {
+table{
   width: 100%;
-  border-radius: 6px;
+  border-radius: 4px;
 }
-tr,td,th,table {
+tr,td,th,table{
   border: 1px solid;
 }
-th {
+th{
+  background: #081B4B;
+  color: white;
   padding: 6px;
 }
-td {
+td{
   padding: 3px;
 }
