--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,8 @@
 table{
   width: 100%;
   border-radius: 4px;
+  margin: 20px 0;
+  border-collapse: collapse;
 }
 tr,td,th,table{
   border: 1px solid;
@@ -15,8 +17,8 @@ tr,td,th,table{
 th{
   background: #081B4B;
   color: white;
-  padding: 6px;
+  padding: 10px;
 }
 td{
-  padding: 3px;
+  padding: 10px;
 }
