Added background image to app.jsx

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+.app {
+  background-image: url('https://plus.unsplash.com/premium_photo-1680363254554-d1c63ad8d33d?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8YmFua3xlbnwwfHwwfHx8MA%3D%3D');
+}
 .header {
   text-align: center;
   box-shadow: 10px 10px 5px;
